_sass/_mixins.scss
// Brand
@mixin logo($width: 200, $height: 50) {
  display: block;
  background: url(/img/logo.png) no-repeat;
  background: url(/img/logo.svg) no-repeat;
  width: #{$width}px;
  height: #{$height}px;
  background-size: contain;
  text-indent: -9999px;
  white-space: nowrap;
  overflow: hidden;

  &:focus,
  &:hover {
    text-decoration: none;
  }

  @include media-breakpoint-down(sm) {
    width: 150px;
    height: 40px;
  }
}

// Spacing
@mixin mt-5 { margin-top: 3rem !important; }
@mixin mt-6 { margin-top: 4rem !important; }
@mixin mt-7 { margin-top: 5rem !important; }

@mixin mb-0 { margin-bottom: 0 !important; }
@mixin mb-3 { margin-bottom: 1rem !important; }
@mixin mb-4 { margin-bottom: 1.5rem !important; }
@mixin mb-5 { margin-bottom: 3rem !important; }
@mixin mb-6 { margin-bottom: 4rem !important; }
@mixin mb-7 { margin-bottom: 5rem !important; }
@mixin mb-10 { margin-bottom: 8rem !important; }

@mixin pt-3 { padding-top: 1rem !important; }
@mixin pt-5 { padding-top: 3rem !important; }

@mixin pb-3 { padding-bottom: 1rem !important; }
@mixin pb-5 { padding-bottom: 3rem !important; }

@mixin pr-2 { padding-right: 0.5rem !important; }
@mixin pr-3 { padding-right: 1rem !important; }

@mixin pl-2 { padding-left: 0.5rem !important; }
@mixin pl-3 { padding-left: 1rem !important; }

@mixin py-3 {
  @include pt-3;
  @include pb-3;
}

@mixin py-5 {
  @include pt-5;
  @include pb-5;
}

@mixin px-2 {
  @include pr-2;
  @include pl-2;
}

@mixin px-3 {
  @include pr-3;
  @include pl-3;
}

// Tables
%table-borderless {
  .table td, .table th {
    border: none !important;
  }
}

// Lists
%list-base {
  ul {
    li:not(:last-child) {
      @extend .pb-3;
    }
  }
}

%list-inside {
  @extend %list-base;

  ul {
    @extend .pl-0;

    li {
      list-style-position: inside;
    }
  }
}

// Buttons

// Copy of Bootstrap's button variant mixin with
// disabled and active styles removed
@mixin button-tertiary($color, $background, $border, $active-color) {
  $active-background: $background;
  $active-border: $active-color;

  color: $color;
  background-color: $background;
  border-color: $border;
  @include box-shadow($btn-box-shadow);

  @include hover { // styles focus state as well
    color: $active-color;
    background-color: $active-background;
    border-color: $active-border;
  }

  &:focus,
  &.focus {
    @if $enable-shadows {
      box-shadow: $btn-box-shadow, 0 0 0 2px rgba($border, .5);
    } @else {
      box-shadow: 0 0 0 2px rgba($border, .5);
    }
  }

  i {
    color: $active-color;
  }
}

%button-base {
  @extend .btn;
  @extend .font-weight-bold;

  i {
    @extend .ml-2;
  }
}

%button-primary {
  @extend %button-base;
  @extend .btn-primary;
  @extend .btn-lg;
  @extend .text-uppercase;
}

%button-secondary {
  @extend %button-base;
  @extend .btn-secondary;
  @extend .btn-outline-secondary;
  @extend .btn-lg;
}

%button-tertiary {
  @extend %button-base;
  @extend .btn-sm;
  @include button-tertiary($btn-tertiary-color, $btn-tertiary-bg,
    $btn-tertiary-border, $btn-tertiary-active-color);
}

// Cards
@mixin card-box-shadow($box-shadow: $card-box-shadow, $border-color: $link-hover-color) {
  border-color: $border-color;
  -webkit-box-shadow: $box-shadow;
  box-shadow: $box-shadow;
}

@mixin semantic-card($class-name, $clickable: true, $title-alignment: left,
  $title-color: $brand-primary, $subtitle-color: $brand-primary-muted, $footer-border-off: true) {

  $title-font-size: $font-size-xl;

  $subtitle-font-size: $font-size-md;
  $subtitle-alignment: $title-alignment;

  $text-color: $body-color;
  $text-font-size: $font-size-md;
  $text-alignment: left;

  $footer-font-size: $font-size-md;
  $footer-alignment: $title-alignment;

  .#{$class-name} {
    @extend .col-md-4;
    @extend .mb-3;
    @extend .mb-md-4;
  }

  .#{$class-name}-card {
    @extend .card;
    @extend .card-outline-primary;
    height: 100%;

    @if $clickable {
      &:hover,
      &:focus {
        @include card-box-shadow();
      }
    }
  }

  .#{$class-name}-img {
    @extend .card-img-top;
    @extend .img-fluid;
  }

  .#{$class-name}-block {
    @extend .card-block;
  }

  .#{$class-name}-title {
    @extend .card-title;
    color: $title-color;
    font-size: $title-font-size;
    text-align: $title-alignment;
  }

  .#{$class-name}-subtitle {
    @extend .card-subtitle;
    color: $subtitle-color;
    font-size: $subtitle-font-size;
    text-align: $subtitle-alignment;
  }

  .#{$class-name}-text {
    @extend .card-text;
    @extend .mt-4;
    color: $text-color;
    font-size: $text-font-size;
    text-align: $text-alignment;
  }

  .#{$class-name}-footer {
    @extend .card-footer;
    font-size: $footer-font-size;
    text-align: $footer-alignment;

    @if $footer-border-off {
      @extend .no-border;
    }

    span ~ i {
      @extend .ml-2;
      vertical-align: middle;
    }
  }

}

// Misc
%text-lead-col-base {
  @extend .col-11;
  @extend .col-sm-12;
  @extend .col-md-10;
  @extend .col-lg-8;
  @extend .mx-auto;
  @extend .text-left;
}

%form-col-base {
  @extend %text-lead-col-base;
}

